service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webcolor
spec:
  selector:
    app: webcolor
  ports:
  - port: 80  
    targetPort: 80
  type: ClusterIP
