ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webcolor
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: webcolor.192.168.49.51.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webcolor
            port:
              number: 80
